LanguageTool Change Log

2.6-SNAPSHOT (release planned for 2014-06-30)

-Breton:
    -updated FSA spelling dictionary from An Drouizig Breton Spellchecker 0.12

-French:
    -added/improved several rules


2.5 (2014-03-31)

-Breton:
    -a new rule checks that there is a space character between sentences

-Catalan:
    -added/improved many rules
    -fixed false alarms
    -added hundreds of suggestions for barbarisms in a simple replace rule

-Dutch:
    -remove a hack from the word tokenizer code
    -several new false friends (by Sander van Geloven)

-English:
    -added a new rule to handle corrections of mistakes in standard
     English contractions (wasnt, didnt)
    -changed word tokenization so that the hyphen at the end of a
     word is no longer its part
    -removed spelling replacement pairs that made LT work very slowly
    -fixed a large number of false alarms
    -added new rules to handle common contextual misspellings and
     redundant phrases as well as common grammatical mistakes. Now
     the number of rules for English exceeds 1000.
    -made it possible to use synthesizer to both add a determiner and
     make different replacement operations when creating suggestions;
     simply add \\+INDT or \\+DT as special keywords to the regex that
     creates the POS tag in the match element
    -a new rule checks that there is a space character between sentences

-Esperanto:
    -added/improved several rules
    -a new rule checks that there is a space character between sentences

-French:
    -updated POS tag dictionary and Hunspell dictionary to Dicollecte-5.0.2
    -added/improved several rules
    -a new rule checks that there is a space character between sentences

-German:
    -fixed several false alarms
    -added/improved several rules
    -a new rule checks that there is a space character between sentences

-Japanese:
    -added some rules (thanks to Silvan Jegen)

-Polish:
    -updated POS tag dictionary to PoliMorfologik 2.1