@@ -66,56 +66,43 @@ public class AnalyzedGermanToken extends AnalyzedToken {
     
     //System.err.println(fullform + " " + posTagString);
     for (String part : parts) {
-      if (part.equals("EIG"))
+      if (part.equals("EIG")) {
         type = POSType.PROPER_NOUN;
-      else if (part.equals("SUB") && type == null)
+      } else if (part.equals("SUB") && type == null) {
         type = POSType.NOMEN;
-      else if (part.equals("PA1") || part.equals("PA2"))
+      } else if (part.equals("PA1") || part.equals("PA2")) {
         type = POSType.PARTIZIP;
-      else if (part.equals("VER") && type == null)
+      } else if (part.equals("VER") && type == null) {
         type = POSType.VERB;
-      else if (part.equals("ADJ") && type == null)
+      } else if (part.equals("ADJ") && type == null) {
         type = POSType.ADJEKTIV;
-      else if (part.equals("PRO") && type == null)
+      } else if (part.equals("PRO") && type == null) {
         type = POSType.PRONOMEN;
-      else if (part.equals("ART") && type == null)
+      } else if (part.equals("ART") && type == null) {
         type = POSType.DETERMINER;
-
-      else if (part.equals("AKK"))
+      } else if (part.equals("AKK")) {
         casus = Kasus.AKKUSATIV;
-      else if (part.equals("GEN"))
+      } else if (part.equals("GEN")) {
         casus = Kasus.GENITIV;
-      else if (part.equals("NOM"))
+      } else if (part.equals("NOM")) {
         casus = Kasus.NOMINATIV;
-      else if (part.equals("DAT"))
+      } else if (part.equals("DAT")) {
         casus = Kasus.DATIV;
-
-      else if (part.equals("PLU"))
+      } else if (part.equals("PLU")) {
         numerus = Numerus.PLURAL;
-      else if (part.equals("SIN"))
+      } else if (part.equals("SIN")) {
         numerus = Numerus.SINGULAR;
-
-      else if (part.equals("MAS"))
+      } else if (part.equals("MAS")) {
         genus = Genus.MASKULINUM;
-      else if (part.equals("FEM"))
+      } else if (part.equals("FEM")) {
         genus = Genus.FEMININUM;
-      else if (part.equals("NEU"))
+      } else if (part.equals("NEU")) {
         genus = Genus.NEUTRUM;
-      else if (part.equals("NOG"))
+      } else if (part.equals("NOG")) {
         genus = Genus.FEMININUM;    // NOG = no genus because only used as plural
-      else if (part.equals("ALG"))
+      } else if (part.equals("ALG")) {
         genus = Genus.ALLGEMEIN;
-
-      else if (part.equals("DEF"))
-        ; // not yet used
-      else if (part.equals("DEM"))    //???
-        ; // not yet used
-      else if (part.equals("PER"))
-        ; // not yet used
-
-      //else
-      //System.err.println("unknown: " + posTagString + " for fullform " + fullform);
-      // TODO: add else here that throws execption?!
+      }
     }
     
   }
