@@ -8,6 +8,10 @@ LanguageTool Change Log
 -French:
     -added/improved several rules
 
+-API:
+    -JLanguageTool.printIfVerbose() has been changed from protected to private,
+     as it was not used anywhere and it's not really useful to extend JLanguageTool
+
 
 2.5 (2014-03-31)
 
